--- a/Thomas's Bootstrap Stuff/LogIn/login.html
+++ b/Thomas's Bootstrap Stuff/LogIn/login.html
@@ -11,17 +11,33 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </header>
 <body>
-<form>
+	<form class="form-horizontal">
   <div class="form-group">
-    <label for="exampleInputEmail1">Username:</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="">
+    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+    <div class="col-sm-10">
+      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+    </div>
   </div>
   <div class="form-group">
-    <label for="exampleInputPassword1">Password:</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
+    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+    <div class="col-sm-10">
+      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+    </div>
   </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <div class="checkbox">
+        <label>
+          <input type="checkbox"> Remember me
+        </label>
+      </div>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
 	<a href="LOGINURL" class="btn btn-default" role="button">Log In!</a>
+    </div>
+  </div>
 </form>
-
 </body>
 </html>
