--- a/Thomas's Bootstrap Stuff/Add A Course/Enroll.html
+++ b/Thomas's Bootstrap Stuff/Add A Course/Enroll.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary">Enroll</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Enroll</button>
                 </div>
             </div>
         </div>
