added working calendar

--- a/Thomas's Bootstrap Stuff/Add A Course/Enroll.html
+++ b/Thomas's Bootstrap Stuff/Add A Course/Enroll.html
@@ -31,7 +31,8 @@
                         <div class="col-sm-10">
                         <input type="email" class="form-control" id="courseID" placeholder="Enter Course URL">
                         </div>
-                    </div>
+                        </div>
+                    </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
