pushing bootstrap stuff

--- a/Thomas's Bootstrap Stuff/Add A Course/Enroll.html
+++ b/Thomas's Bootstrap Stuff/Add A Course/Enroll.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
 <title>Add a Course</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<script src="lib/bootstrap-colorselector-0.2.0/js/bootstrap-colorselector.js"></script>
+
 <style type="text/css">
     .bs-example{
     	margin: 20px;
@@ -43,6 +45,7 @@
                         </div>
                     </form>
                 </div>
+                
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Enroll</button>
@@ -50,6 +53,9 @@
             </div>
         </div>
     </div>
-</div>     
+</div> 
+
+
+
 </body>
 </html>                                		                                		
